# jairocloud-groups-manager

./: .editorconfig  Dockerfile.vite  README.md  compose.yaml  eslint.config.mjs  nuxt.config.ts  package.json  pnpm-lock.yaml  pyproject.toml
.devcontainer/: devcontainer.json  setup_commands.sh
app/components/: AppFooter.vue  AppHeader.vue  AppSideMenu.vue  HeaderSearch.vue
app/composables/: data.json  useDataStore.ts
app/i18n/locales/: en.json  ja.json
app/layouts/: default.vue
app/pages/groups/: index.vue
app/pages/repos/: index.vue
app/pages/users/: index.vue
app/types/: resources.ts
configs/: app.config.ts  server.config.toml
docs/: content.config.ts  nuxt.config.ts
docs/app/components/: AppHeader.vue
docs/app/layouts/: default.vue
docs/app/pages/: [...slug].vue  index.vue
docs/content/03.db/: 01.service_settings.md
docs/content/detailed/: 01.introduction.md
nginx/: Dockerfile
nginx/conf.d/: default.conf
server/: app.py  config.py  const.py  ext.py  factory.py
server/client/: users.py  utils.py
server/schema/: base.py  map_error.py  map_user.py
server/views/: auth.py  route.py  users.py
src/app/components/: AppFooter.vue  AppHeader.vue  AppLogo.vue
src/app/composables/: forms.ts  groups.ts  repositories.ts  useMenu.ts  users.ts
src/app/layouts/: default.vue
src/app/types/: groups.ts  repositories.ts
src/contrib/: __init__.py
src/server/: celery_app.py  config.py  const.py  exc.py  ext.py  factory.py
tests/: conftest.py  helpers.py
tests/data/: mapuser.json
tests/schema/: test_map_user.py
(+60 files in other folders)
