[project]
name = "jairocloud-groups-manager"
version = "0.1.0"
authors = [
  {name = "National Institute of Informatics"}
]
description = "A web client for JAIRO Cloud repository administrators to manage groups in the GakuNin Cloud Gateway."
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.14"
dependencies = [
    "celery[redis]>=5.6.0",
    "flask>=3.1.2",
    "pydantic[email]>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
]

[tool.pytest]
pythonpath = ["."]
addopts = [
    "--import-mode=importlib",
    "--cov=src/server",
    "--cov-branch"
]

[tool.coverage.run]
omit = ["__init__.py", "tests/*"]
